# vizthinker

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  electron_main.js  index.html  log.txt  package-lock.json  package.json  preload.js  pyproject.toml  tsconfig.json  vite.config.ts
config/: tsconfig.json  vite.config.ts
deploy/: QUICK_START.md  README.md  backend_config.py  deploy.sh  nginx.conf  test-deployment.sh  vizthinker-backend.service
javascript/: electron_main.js
res/: requirements.txt
server/: llm.py  logger.py  main.py  route.py  service.py
server/dao/: postgre.py  sqlite.py
server/scheme/: chatNode.py
src/: App.tsx  ChatWindow.tsx  Settings.tsx  image.d.ts
src/asset/images/: Untitled Document 2.graphite
src/config/: api.ts
src/constants/: settingsConstants.ts
src/nodejs/: ChatWindow.tsx
src/react/: App.tsx  BranchEdge.tsx  ChatLayout.tsx  ChatNode.tsx  ChatWindow.tsx  ExportModal.tsx  ExtendedNode.tsx  HeaderBar.tsx  ProtectedRoute.tsx  Settings.tsx  SettingsContext.tsx  auth.tsx  main.tsx
src/typejs/: auth.ts  export.ts  position.ts  react-router-dom.d.ts  store.ts  style.ts
