[tool.poetry]
name = "vizthink-backend"
version = "0.1.0"
description = "Backend service for VizThink AI desktop application"
authors = ["VizThink AI Team <team@vizthink.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiosqlite = "^0.19.0"
openai = "^1.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
