[tool.poetry]
name = "vizthinker-backend"
version = "0.1.0"
description = "Backend service for VizThinker AI desktop application"
authors = ["VizThinker AI Team <team@vizthinker.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiosqlite = "^0.19.0"
openai = "^1.30.1"
ollama = "^0.3.3"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
